--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interface\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
+    <ProjectReference Include="..\DataAssetObjects\DataAssetObjects.csproj" />
+  </ItemGroup>
+
 </Project>
