Update screen login

--- a/WPF/appsettings.json
+++ b/WPF/appsettings.json
@@ -9,6 +9,6 @@
   ],
 
   "ConnectionStrings": {
-    "MyCnn": "server =DESKTOP-29PPQCA\\MSSQLSERVER01; database = HRManagement;uid=sa;pwd=1; TrustServerCertificate=True;"
+    "MyCnn": "server =ADMIN\\MSSQLSERVER01; database = HRManagement;uid=sa;pwd=1234; TrustServerCertificate=True;"
   }
 }
