--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -10,4 +10,9 @@
     <Folder Include="InterfaceServie\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
