upload Department management

--- a/WPF/appsettings.json
+++ b/WPF/appsettings.json
@@ -8,7 +8,7 @@
     "**/platforms"
   ],
 
-  "ConnectionStrings": {
-    "MyCnn": "server =DESKTOP-K0615KK\\KHUONGLDHE; database = HRManagement;uid=sa;pwd=123; TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "MyCnn": "server =(local); database = HRManagement;uid=sa;pwd=123456; TrustServerCertificate=True;"
+    }
 }
