--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BusinessObjects\BusinessObjects.csproj" />
     <ProjectReference Include="..\DataAssetObjects\DataAssetObjects.csproj" />
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
