--- a/WPF/appsettings.json
+++ b/WPF/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "MyCnn": "server =DESKTOP-29PPQCA\\MSSQLSERVER01; database = HRManagement;uid=sa;pwd=1; TrustServerCertificate=True;"
+    "MyCnn": "server =(local); database = HRManagement;uid=sa;pwd=123; TrustServerCertificate=True;"
   }
 }
