--- a/WPF/appsettings.json
+++ b/WPF/appsettings.json
@@ -7,7 +7,7 @@
     "**/obj",
     "**/platforms"
   ],
-  "ConnectionStrings": {
-    "MyCnn": "server =(local); database = HRManagement;uid=sa;pwd=123; TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "MyCnn": "server =MIKE; database = HRManagement;uid=sa;pwd=123; TrustServerCertificate=True;"
+    }
 }
